*Empty MediaWiki Message*

--- a/Пейнечурька.mw
+++ b/Пейнечурька.mw
@@ -2,7 +2,7 @@
 |name =Пейнечурька
 |latin =Állium satívum
 |image file =Garlic.jpg
-|image descr =Пейнечурькань пелькст
+|image descr =Пейнечурькань пря ды пелькст
 |superregnum =
 |subregnum = 
 |раздел =
