*Empty MediaWiki Message*

--- a/Пурьгинепалакс.mw
+++ b/Пурьгинепалакс.mw
@@ -46,7 +46,7 @@
 * ({{Lang-lat|Cdrduus nutans L.}}, {{lang-ru| ''Чертополох поникший''}})  - '''''нувара пурьгинепалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Carduus hamuldsus Ehrh.}}, {{lang-ru| ''Чертополох крючковатый''}})  - '''''сюракшов пурьгинепалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Carduus acanthoides L.}}, {{lang-ru| ''Чертополох колючий''}})  - '''''пупиця пурьгинепалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Cdrduus crispus L.}}, {{lang-ru| ''Чертополох курчавый''}})  - '''''кудряв пурьгииепалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Cdrduus crispus L.}}, {{lang-ru| ''Чертополох курчавый''}})  - '''''[[Кудряв пурьгинепалакс|кудряв пурьгинепалакс]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 
 == Содамоёвкст ==
