/* Веленть лемденть */ сёрмадозь велень теемадо легенда

--- a/Коряй_Кужо_(Ратор_буе).mw
+++ b/Коряй_Кужо_(Ратор_буе).mw
@@ -63,7 +63,10 @@
 
 '''Коряй Кужо''' ({{lang-ru|п. Алтышево}}) — те эрзянь веле [[Ратор буе|Ратор буесэ]] [[Ветькень Республикась|Ветькень Масторсо]].
 
-== Веленть лемденть  ==
+== Веленть лемденть   ==
+Легендась ульнесь сёрмадозь А.Е. Дерюшкинэнь 82-це иесэ Аловелень эрицянть валонзо коряс. Эйсэнзэ ёвтневи седе, што веленть теизе колмо лелят-ялакстэнь ютксто вейкесь, конатнень лемест Ало, Кабай ды Коряй. Икеле сынь эрясть «Пичевеле велесэ, ды кодат-бути тувталтнень коряс эрявсь тенст туемс эсь велестэ, муемс од тарка. Вейкесь эйстэст – Ало – озась эрямо Сарлейде аволь васоло ды теизе Покш Алова ([[Ало веле (Отяжбуе)|Алово]], Отяжелень район) веленть, лиясь – Кобай – тусь седев васов ды теизе Кобале ([[Кабаево]], Дубёнкань район) веленть, колмоце ялаксось – Коряй – печтясь Сур леенть трокс ды ульнесь Коряй-Кужо ([[Коряй Кужо (Ратор буе)|Алтышево]], Чувашия) велень теицякс»
+<ref>Марискин И.С., Марискин О.И. Село на Трезовке. – Саранск: Тип. «Крас. Окт.», 2001. – 58 С.</ref>
+
 == Содавикс ломанть те велестэнть ==
 
 == Сёрм.: ==
