*Empty MediaWiki Message*

--- a/Кансявтикше.mw
+++ b/Кансявтикше.mw
@@ -2,7 +2,7 @@
 |name =Кансявтикше
 |latin =Cynoglossum
 |image file =CynoglossumOfficinale-bloem-kl.jpg
-|image descr =Ормаменьксэнь кансявтикше (''Cynoglóssum officinále'')
+|image descr =[[Ормаменьксэнь кансявтикше]] (''Cynoglóssum officinále'')
 |superregnum =
 |subregnum = 
 |раздел =
