--- a/Кансявтикше.mw
+++ b/Кансявтикше.mw
@@ -44,7 +44,7 @@
 Наукань кряс латинэнь лемезэ ''Cynoglossum'' саеви {{lang-el|κύων}} (''киска'') ды {{lang-el2|γλῶσσα}} (''кель'') валтнестэ, - келей ды шершам лопанзо кис.
 
 == Тикшень лемтне ==
-* ({{Lang-lat|м}}, {{lang-ru| ''Чернокорень лекарственный''}})  - '''''[[ормаменьксэнь кансявтикше]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Cynoglo ssum officindle L.}}, {{lang-ru| ''Чернокорень лекарственный''}})  - '''''[[ормаменьксэнь кансявтикше]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 == Содамоёвкст ==
 == Сёрм.: ==
 <references />
