*Empty MediaWiki Message*

--- a/Сабля_тикше.mw
+++ b/Сабля_тикше.mw
@@ -49,5 +49,5 @@
 == Сёрм.: ==
 <references />
 
-[[Категория:Биология|C]]
-[[Категория:Тикшеть|C]]
+[[Категория:Биология|С]]
+[[Категория:Тикшеть|С]]
