*Empty MediaWiki Message*

--- a/Пичечулякс.mw
+++ b/Пичечулякс.mw
@@ -40,13 +40,21 @@
 | grin             = 
 | ipni              = 
 }}
-'''Пичечулякс''' ({{Lang-lat|''Vaccinium myrtillus''}}) лиякс пичеумарькс, сэнь умарькс, чернигакуракш кандови [[пичеумаринькань|пичеумарень]] (''Vaccinium'') канс (''Ericaceae''). Те максы ярсамс [[ягода|ягодат]]. 
+'''Пичечулякс''' ({{Lang-lat|''Vaccinium myrtillus''}}, лиякс '''пичеумарькс''', '''сэнь умарькс''', '''пичечуля<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''')  —  чернигакуракш кандови [[пичеумаринькань|пичеумарень]] (''Vaccinium'') канс (''Ericaceae''). Те максы ярсамс [[ягода|ягодат]]. 
 
 == Чачозо-покшолмазо ==
-Пичечуляксось касы 10–50 см сэрьс <ref>Gunnevi Bonekamp, лопаланго 78</ref>, кизна пижелат алонь кирьксалат лопанзо, конат теленень прыть. Панчтонзо лисить панжиковсто, аштемковсто. Баягине панчттнэстэ лиси веикине авака пелькске. Атяка пелькскетнеде ниле эли кавксо. Панчтонть тюсозо валдо-пижела эли якстерть мериця
+Пичечуляксось касы 10–50 см сэрьс <ref> Gunnevi Bonekamp: Luonnon marjat ja hedelmät värikuvina, Suomen Luonnonsuojelun Tuki Oy, 2001, ISBN 951-9381-80-5 Gunnevi Bonekamp, лопаланго 78{{ref-fi}}</ref>, кизна пижелат алонь кирьксалат лопанзо, конат теленень прыть. Панчтонзо лисить панжиковсто, аштемковсто. Баягине панчттнэстэ лиси веикине авака пелькске. Атяка пелькскетнеде ниле эли кавксо. Панчтонть тюсозо валдо-пижела эли якстерть мериця&
 
-
+== Фотокувт== 
+<gallery>
+Image:Illustration Vaccinium myrrtillus0.jpg|250px|center|Пичечуля (ботаникань артовкс)
+Image:BilberriesBig.jpg|250px|center|Пичечулянь ягодат
+Image:Конново 2007 (0003).jpg|250px|center|Пичечулясь [[вирь]]сэ 
+Image:Vaccinium myrtillus RecolteAuPeigne.JPG|250px|center|[[Франция]]со пурныть пичечуля
+</gallery>
 ==Лисьмапря==
-* Gunnevi Bonekamp: Luonnon marjat ja hedelmät värikuvina, Suomen Luonnonsuojelun Tuki Oy, 2001, ISBN 951-9381-80-5
-
-[[Категория:Тикшеть]]
+<references />
+[[Категория:Биология|П]]
+[[Категория:Ярсамо тикшеть‎|П]]
+[[Категория:Ормадо лезэвть|П]]
+[[Категория:Тикшеть|П]]
