*Empty MediaWiki Message*

--- a/Паксячурька.mw
+++ b/Паксячурька.mw
@@ -2,7 +2,7 @@
 |name = Паксячурька
 |latin = Allium ursinum
 |image file = Ursa ajlo 6.jpg
-|image descr = Паксячурькань касовкст [[вирь]]сэ ( [[Грос-Герау]], [[Гессен]] модансонть, [[Германия]])
+|image descr = Паксячурькань касовкст [[вирь]]сэ ( [[Грос-Герау]], [[Гессен]] модасонть, [[Германия]])
 |superregnum =
 |subregnum = 
 |regnum =
