--- a/Карвотикше.mw
+++ b/Карвотикше.mw
@@ -1,5 +1,5 @@
 [[Артовкс:Origanum vulgare - harilik pune.jpg|thumb|Карвотикше]]
-'''Ка́рвотикше''' (лат. ''Origanum vulgare'', {{Lang-ru|Душица обыкновенная}}) — те тикше яснотковонь (Lamiaceae) семиястонть.
+'''Ка́рвотикше''' ({{Lang-la|Origanum vulgare}}, {{Lang-ru|Душица обыкновенная}}) — те тикше яснотковонь (Lamiaceae) семиястонть.
 
 == Тикшень лемтне == 
 * [[Отяжбуе|Отяжбуень]] [[Дюрькина (Отяжбуе)|Дюрька велесэ]] - '''''чай тикше''''' (čaj t’ikše)<ref name="Гребнева"/>.
