--- a/Тикшень_лемтне.mw
+++ b/Тикшень_лемтне.mw
@@ -1,10 +1,10 @@
 [[Image:Grass-JW.jpg|thumb|300px|right| Тикше]]
 '''Ти́кшень лемтне''' — кода мерить [[Эрзят|эрзятне]] эрьва-кодамо [[тикше]]тненень, конат касыть вирьга, паксява, латкова.
 
-== Тикшеть ==
+== Тикшеть <ref name="РСятко">«Сятко» №2, 1991 ие. ISSN 0207—1894{{ref-myv}}</ref>==
 * Кискань тикше ( кортыть [[Покш Килейбуе|Покш Килейбуень]] Косогор велесэ, [[Покш Игнадбуе|Покш Игнадбуень]] Вармазей велесэ).
 * Козлець (кортыть[[Чаунзабуе|Чаунзабуень]] Мокшалей велесэ ды [[Отяжбуе|Отяжбуень]] Дюрька велесэ)
-* Козулькай ( кортыть [[Орданьбуе|Орданьбуень]] Чукал ды Низовка велетнесэ, [[Отяжбуе|Отяжбуень]] Дюрька велесэ, [[Тумобуе|Тумобуень]] Кабаева велесэ)
+* [[Козулькай]]<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref> ( кортыть [[Орданьбуе|Орданьбуень]] Чукал ды Низовка велетнесэ, [[Отяжбуе|Отяжбуень]] Дюрька велесэ, [[Тумобуе|Тумобуень]] Кабаева велесэ)
 * Козьгал (кортыть [[Кочкурбуе|Кочкурбуень]] Якстере зоря велесэ)
 * Козьгалав 
 * Колган корен (кортыть  [[Чаунзабуе|Чаунзабуень]] Мокшалей, Пенгелей, Красный Воин, Ремезенка велетнесэ)
@@ -17,8 +17,9 @@
 
 == Содамоёвкст ==
 
-== Сёрм: ==
-* «Сятко» №2, 1991 ие  
+==Лисьмапря==
+<references />
 
-[[Category:Биология|Б]]
+
+[[Category:Биология]]
 [[Категория:Тикшеть]]
