*Empty MediaWiki Message*

--- a/Пичечулякс.mw
+++ b/Пичечулякс.mw
@@ -40,7 +40,7 @@
 | grin             = 
 | ipni              = 
 }}
-'''Пичечулякс''' ({{Lang-lat|''Vaccinium myrtillus''}}, лиякс '''пичеумарькс''', '''сэнь умарькс''', '''пичечуля<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''')  —  чернигакуракш кандови [[пичеумаринькань|пичеумарень]] (''Vaccinium'') канс (''Ericaceae''). Те максы ярсамс [[ягода|ягодат]]. 
+'''Пичечулякс''' ({{Lang-lat|''Vaccinium myrtillus''}}, лиякс '''пичеумарькс''', '''сэнь умарькс''', '''пичечуля<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''', {{lang-ru| ''Черни́ка'', или ''Черника обыкновенная'', или ''Черника миртолистная''}})  —  чернигакуракш кандови [[пичеумаринькань|пичеумарень]] (''Vaccinium'') канс (''Ericaceae''). Те максы ярсамс [[ягода|ягодат]]. 
 
 == Чачозо-покшолмазо ==
 Пичечуляксось касы 10–50 см сэрьс <ref> Gunnevi Bonekamp: Luonnon marjat ja hedelmät värikuvina, Suomen Luonnonsuojelun Tuki Oy, 2001, лопаланго 78 ISBN 951-9381-80-5 {{ref-fi}}</ref>, [[кизэ|кизна]] пижелат алонь кирьксалат лопанзо, конат теленень прыть. Панчтонзо лисить [[панжиков]]сто, [[аштемков]]сто. Баягине панчттнэстэ лиси веикине авака пелькске. Атяка пелькскетнеде [[ниле]] эли [[кавксо]]. Панчтонть [[тюс]]озо [[валдо]]-[[пиже]]ла эли [[якстере|якстерть]] мериця. 
