*Empty MediaWiki Message*

--- a/Козулькай.mw
+++ b/Козулькай.mw
@@ -48,7 +48,7 @@
 * ({{Lang-lat|Bidens сёгпиа L.}}, {{lang-ru| ''Череда поникшая''}})  - '''''нувара козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Bidens frondosa L.}}, {{lang-ru| ''Череда олиственная''}})  - '''лопав козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Bidens radiata Thuill.}}, {{lang-ru| ''Череда лучистая''}})  - '''золотушной козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Bidem tripartita L.}}, {{lang-ru| ''Череда трехраздельная''}})  - ''''колмов явозь козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Bidem tripartita L.}}, {{lang-ru| ''Череда трехраздельная''}})  - '''колмов явозь козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 == Содамоёвкст ==
 
