*Empty MediaWiki Message*

--- a/Кортамо:Раужо_пря_тикше.mw
+++ b/Кортамо:Раужо_пря_тикше.mw
@@ -1,2 +1,3 @@
 ==ЛопаПарцун:Ref-eng ==
 [[Теиця:Kaftaj|Kaftaj]], пароль улевель теемс ЛопаПарцун:Ref-eng. Сюконян))))--[[Теиця:Erzianj jurnalist|Erzianj jurnalist]] ([[Теицянь кортамось:Erzianj jurnalist|обсуждение]]) 14:18, 8 Умарьковонь 2016 (UTC)
+: [[Теиця:Erzianj jurnalist|Erzianj jurnalist]], ули <nowiki>{{ref-en}}</nowiki> --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 14:58, 8 Умарьковонь 2016 (UTC)
