*Empty MediaWiki Message*

--- a/Раужо_пря_тикше.mw
+++ b/Раужо_пря_тикше.mw
@@ -42,7 +42,7 @@
 '''Раужо пря тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Prunélla}}, {{lang-ru| ''Черноголо́вка''}}) — [[тикше]]нь касовкс Ясноткань семиястонть (Lamiáceae). 
 
 Латинэнь лемезэ ''prunella'' саеви ({{lang-nl|bruynelle}}), кона невти лопатьнень ды цецянть бурой тюсонть лангс. Истя жо ({{lang-de|Brakne}}) (''кирьгань орма''), секс мекс ловови ормадо лезэв тикшекс. Сонзэ ведьсэнть шлить керявкст, орвонь таркат ды парсте пичкавты сыявкст. 
-Алкуксонь раужо пря тикшесь (''Prunélla vulgáris'') — антиоксидант, виевгавты иммунитет, лоткавты вирусонь [[ормат]] ды таргоземат<ref>Immune modulatory effects of Prunella vulgaris L. Int J Mol Med. 2005 Mar;15(3):491-6.{{ref-eng}}</ref><ref>A polysaccharide fraction from medicinal herb Prunella vulgaris downregulates the expression of herpes simplex virus antigen in Vero cells. J Ethnopharmacol. 2004 Jul;93(1):63-8.{{ref-eng}}</ref><ref>Phenolics-rich extracts from Silybum marianum and Prunella vulgaris reduce a high-sucrose diet induced oxidative stress in hereditary hypertriglyceridemic rats. Pharmacol Res. 2004 Aug;50(2):123-30.{{ref-eng}}</ref><ref>Biological activities of Prunella vulgaris extract. Phytother Res. 2003 Nov;17(9):1082-7.{{ref-eng}}</ref><ref>Anti-allergic and anti-inflammatory triterpenes from the herb of Prunella vulgaris. Planta Med. 2000 May;66(4):358-60.{{ref-eng}}</ref><ref>Inhibition of immediate-type allergic reactions by Prunella vulgaris in a murine model. Immunopharmacol Immunotoxicol. 2001 Aug;23(3):423-35.{{ref-eng}}</ref>.
+Алкуксонь раужо пря тикшесь (''Prunélla vulgáris'') — антиоксидант, виевгавты иммунитет, лоткавты вирусонь [[ормат]] ды таргоземат<ref>Immune modulatory effects of Prunella vulgaris L. Int J Mol Med. 2005 Mar;15(3):491-6.{{ref-en}}</ref><ref>A polysaccharide fraction from medicinal herb Prunella vulgaris downregulates the expression of herpes simplex virus antigen in Vero cells. J Ethnopharmacol. 2004 Jul;93(1):63-8.{{ref-en}}</ref><ref>Phenolics-rich extracts from Silybum marianum and Prunella vulgaris reduce a high-sucrose diet induced oxidative stress in hereditary hypertriglyceridemic rats. Pharmacol Res. 2004 Aug;50(2):123-30.{{ref-en}}</ref><ref>Biological activities of Prunella vulgaris extract. Phytother Res. 2003 Nov;17(9):1082-7.{{ref-en}}</ref><ref>Anti-allergic and anti-inflammatory triterpenes from the herb of Prunella vulgaris. Planta Med. 2000 May;66(4):358-60.{{ref-en}}</ref><ref>Inhibition of immediate-type allergic reactions by Prunella vulgaris in a murine model. Immunopharmacol Immunotoxicol. 2001 Aug;23(3):423-35.{{ref-en}}</ref>.
 Чапамсь молиця лопанзо путыть ярсамопельс - салатс.
 
 == Тикшень лемтне ==
