Перенаправление на [[Вармань чиньжарамо]]

--- a/Колмов_явозь_козулькай.mw
+++ b/Колмов_явозь_козулькай.mw
@@ -1,60 +1,1 @@
-{{Таксономиясь
-|name = Колмов явозь козулькай
-|latin = Bidens tripartita
-|image file = Bidens tripartita1 eF.jpg
-|image descr = Колмов явозь козулькай (''Bidens tripartita'')
-|superregnum =
-|subregnum = 
-|regnum =
-|раздел =
-|superphylum =
-|phylum = 
-|subphylum =
-|superdivisio =
-|divisio =
-|subdivisio = 
-|superclassis =
-|classis = 
-|subclassis =
-|infraclassis =
-|superordo =
-|ordo = 
-|subordo =
-|infraordo =
-|superfamilia =
-|familia = 
-|subfamilia =
-|tribus =
-|genus =
-|subgenus =
-|species =
-|subspecies =
-|unranked =
-|range map =
-| wikispecies       =Bidens tripartita
-| commons           = Category:Bidens tripartita
-| iucn              = 
-| itis              = 
-| ncbi              = 
-| eol               = 
-| grin             = 
-| ipni              = 
-}}
-'''Колмов явозь козулькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-lat|''Bídens tripartíta''}}, {{lang-ru| ''Череда́ трёхразде́льная''}})  — вейкеиень [[тикше]]нь касовкс Биденс буень (''Bidens'') Астрань семиястонть (''Asteraceae''). 
-
-
-== Чачозо-покшолмазо ==
-Вейкеиень тикшень касовкс. Ундоксось нетьксэв, пек тарадов, човине. Нетьксэзэ вейке, видстэ стядо, якстерьди, вере явови ламо тарадс. 
-
-== Тикшень лемтне ==
-* ({{Lang-lat|Bidens L.}}, {{lang-ru| ''Череда''}})  - '''козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Bidens сёгпиа L.}}, {{lang-ru| ''Череда поникшая''}})  - '''''нувара козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Bidens frondosa L.}}, {{lang-ru| ''Череда олиственная''}})  - '''лопав козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Bidens radiata Thuill.}}, {{lang-ru| ''Череда лучистая''}})  - '''золотушной козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
-
-== Содамоёвкст ==
-
-==Лисьмапря==
-<references />
-[[Категория:Биология|К]]
-[[Категория:Тикшеть|К]]
+#перенаправление [[Вармань чиньжарамо]]
