*Empty MediaWiki Message*

--- a/Вармань_чиньжарамо.mw
+++ b/Вармань_чиньжарамо.mw
@@ -1,15 +1,63 @@
-[[Image:Bidens tripartita1 eF.jpg|thumb|350px|right|border|Вармань чиньжарамо]]
-[[File:Bidens tripartita MHNT.BOT.2004.0.774.jpg|thumb|'' Bidens tripartita'']]
-'''Вармань чиньжарамо''' (лат. ''Bidens tripartita'') — вейке  иенть перть  касыця тикше. 
+{{Таксономиясь
+|name = Вармань чиньжарамо
+|latin = Bidens tripartita
+|image file = Bidens tripartita1 eF.jpg
+|image descr = Колмов явозь козулькай (''Bidens tripartita'')
+|superregnum =
+|subregnum = 
+|regnum =
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       =Bidens tripartita
+| commons           = Category:Bidens tripartita
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 
+| grin             = 
+| ipni              = 
+}}
+'''Вармань чиньжарамо''' (лиякс кортыть: '''Колмов явозь козулькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-lat|''Bídens tripartíta''}}, {{lang-ru| ''Череда́ трёхразде́льная''}}) — вейкеиень [[тикше]]нь касовкс Биденс буень (''Bidens'') Астрань семиястонть (''Asteraceae''). . 
 
-Нетьксэзэ сэрей, рацяня, лопанзо керсевезь. Нетьксэнть песэ [[ожо]] цецят. Цецямонзо мейле теевить тюжа видьметь. Видьмтьне лапужат, песэст [[2 (ловома вал)|кавто]] [[салмукс|салмукскеть]]. Ловови ормадо лезэв тикшекс.  Лакавтыть чай,  кайсить эйсэнзэ чочкос  эйкакшонь  экшелямсто,  зярдо сон середи диатезсэ эли золотухасо. Чайденть сэредицянть  симдитькак.  Лопастонзо ды ундоксстонзо теить однававт коцтонть артомс. Кассы летьке таркасо, сёлт чирева, канавава. 
+Нетьксэзэ сэрей, якстерьди, вере явови ламо тарадс. Рацяня, лопанзо керсевезь. Ундоксось нетьксэв, пек тарадов, човине. Нетьксэнть песэ [[ожо]] цецят. Цецямонзо мейле теевить тюжа видьметь. Видьмтьне лапужат, песэст [[2 (ловома вал)|кавто]] [[салмукс|салмукскеть]]. Ловови ормадо лезэв тикшекс.  Лакавтыть чай,  кайсить эйсэнзэ чочкос  эйкакшонь  экшелямсто,  зярдо сон середи диатезсэ эли золотухасо. Чайденть сэредицянть  симдитькак.  Лопастонзо ды ундоксстонзо теить однававт коцтонть артомс. Кассы летьке таркасо, сёлт чирева, канавава. 
 
 == Тикшень лемтне ==
-Покшигнад буень Игнадвелесэ мерить тензэ '''''ватракшонь чипаня'''''. [[Ламбаське (Отяжбуень)|Ламбаське]] велесэ мерить тензэ '''''раужо педягай'''''.  [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''козылькат'''''. Кой-косо мерить '''''казулька''''', '''''золотушной тикше'''''. Тумобуень Пуркаево велесэ мерить '''''лапужа  кирмалав'''''.
+* Покшигнад буень Игнадвелесэ мерить тензэ '''''ватракшонь чипаня<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>'''''. 
+* [[Ламбаське (Отяжбуень)|Ламбаське]] велесэ мерить тензэ '''''раужо педягай<ref name="Р.Н. Бузакова"/>'''''.  
+* [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''козылькат<ref name="Р.Н. Бузакова"/>'''''. Кой-косо мерить '''''казулька<ref name="Р.Н. Бузакова"/>''''', '''''золотушной тикше<ref name="Р.Н. Бузакова"/>'''''. 
+* Тумобуень Пуркаево велесэ мерить '''''лапужа  кирмалав<ref name="Р.Н. Бузакова"/>'''''.
+* ({{Lang-lat|Bidens L.}}, {{lang-ru| ''Череда''}})  - '''[[козулькай]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Bidens сёгпиа L.}}, {{lang-ru| ''Череда поникшая''}})  - '''''нувара козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Bidens frondosa L.}}, {{lang-ru| ''Череда олиственная''}})  - '''лопав козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Bidens radiata Thuill.}}, {{lang-ru| ''Череда лучистая''}})  - '''золотушной козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
 
-== Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
 
+==Лисьмапря==
+<references />
 
 [[Category:Тикшеть|В]]
 [[Category:Ормадо лезэвть|В]]
+[[Категория:Биология|В]]
