*Empty MediaWiki Message*

--- a/Вармань_чиньжарамо.mw
+++ b/Вармань_чиньжарамо.mw
@@ -40,15 +40,16 @@
 | grin             = 
 | ipni              = 
 }}
-'''Вармань чиньжарамо''' (лиякс кортыть: '''Колмов явозь козулькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-lat|''Bídens tripartíta''}}, {{lang-ru| ''Череда́ трёхразде́льная''}}) — вейкеиень [[тикше]]нь касовкс Биденс буень (''Bidens'') Астрань семиястонть (''Asteraceae''). . 
+'''Вармань чиньжарамо''' (лиякс кортыть: '''Колмов явозь козулькай<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-lat|''Bídens tripartíta''}}, {{lang-ru| ''Череда́ трёхразде́льная''}}) — вейкеиень [[тикше]]нь касовкс Биденс буень (''Bidens'') Астрань семиястонть (''Asteraceae''). 
 
-Нетьксэзэ сэрей, якстерьди, вере явови ламо тарадс. Рацяня, лопанзо керсевезь. Ундоксось нетьксэв, пек тарадов, човине. Нетьксэнть песэ [[ожо]] цецят. Цецямонзо мейле теевить тюжа видьметь. Видьмтьне лапужат, песэст [[2 (ловома вал)|кавто]] [[салмукс|салмукскеть]]. Ловови ормадо лезэв тикшекс.  Лакавтыть чай,  кайсить эйсэнзэ чочкос  эйкакшонь  экшелямсто,  зярдо сон середи диатезсэ эли золотухасо. Чайденть сэредицянть  симдитькак.  Лопастонзо ды ундоксстонзо теить однававт коцтонть артомс. Кассы летьке таркасо, сёлт чирева, канавава. 
+Нетьксэзэ сэрей, [[якстере|якстерьди]], вере явови ламо тарадс. Рацяня, лопанзо керсевезь. Ундоксось нетьксэв, пек тарадов, човине. Нетьксэнть песэ [[ожо]] цецят. Цецямозо мейле теевить [[тюжа]] видьметь. Видьметне лапужат, песэст [[2 (ловома вал)|кавто]] [[салмукс|салмукскеть]]. 
+Ловови ормадо лезэв тикшекс.  Лакавтыть чай,  кайсить эйсэнзэ чочкос  эйкакшонь  экшелямсто,  зярдо сон сэреди диатезсэ эли золотухасо. Чайденть сэредицянть  симдитькак.  [[Лопа]]стонзо ды ундоксстонзо теить од нававт [[коцт]]онть артомс. Касы летьке таркасо, [[сёлт]] чирева, канавава. 
 
 == Тикшень лемтне ==
-* Покшигнад буень Игнадвелесэ мерить тензэ '''''ватракшонь чипаня<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>'''''. 
+* [[Покш Игнадбуе]]нь [[Игнадвеле (Покш Игнадбуе)|Игнадвелесэ]] мерить тензэ '''''ватракшонь чипаня<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>'''''. 
 * [[Ламбаське (Отяжбуень)|Ламбаське]] велесэ мерить тензэ '''''раужо педягай<ref name="Р.Н. Бузакова"/>'''''.  
-* [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ – '''''козылькат<ref name="Р.Н. Бузакова"/>'''''. Кой-косо мерить '''''казулька<ref name="Р.Н. Бузакова"/>''''', '''''золотушной тикше<ref name="Р.Н. Бузакова"/>'''''. 
-* Тумобуень Пуркаево велесэ мерить '''''лапужа  кирмалав<ref name="Р.Н. Бузакова"/>'''''.
+* [[Покш Килейбуе|Покш Килейбуень]] [[Парынзэле (Покш Килейбуе)|Аловелесэ]] – '''''козылькат<ref name="Р.Н. Бузакова"/>'''''. Кой-косо мерить '''''казулька<ref name="Р.Н. Бузакова"/>''''', '''''золотушной тикше<ref name="Р.Н. Бузакова"/>'''''. 
+* [[Тумобуе]]нь [[Пичале (Тумобуе)|Пуркаево велесэ]] мерить '''''лапужа  кирмалав<ref name="Р.Н. Бузакова"/>'''''.
 * ({{Lang-lat|Bidens L.}}, {{lang-ru| ''Череда''}})  - '''[[козулькай]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Bidens сёгпиа L.}}, {{lang-ru| ''Череда поникшая''}})  - '''''нувара козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Bidens frondosa L.}}, {{lang-ru| ''Череда олиственная''}})  - '''лопав козулькай'''''<ref name="Русско-эрзянский ботанический"/>. 
