*Empty MediaWiki Message*

--- a/Аватеште.mw
+++ b/Аватеште.mw
@@ -50,7 +50,7 @@
 <gallery>
 Image:Ciemiężyca czarna Veratrum nigrum flowers 01.jpg|250px|center|(''Veratrum nigrum'')
 Image:Veratrum stamineum 11.jpg|250px|center|(''Veratrum stamineum'')
-Image:Veratrum Tourn.jpg|250px|center|Ашо аватеште [[тунда]]
+Image:Veratrum Tourn.jpg|250px|center|Ашо аватеште [[тундо|тунда]]
 </gallery>
 
 == Содамоёвкст ==
