*Empty MediaWiki Message*

--- a/Аватеште.mw
+++ b/Аватеште.mw
@@ -1,7 +1,7 @@
 {{Таксономиясь
 |name =Аватеште
 |latin =Veratrum
-|image file =Veratrum oxysepalum1SHSU.jpg|thumb|273px|right|
+|image file =Veratrum oxysepalum1SHSU.jpg
 |image descr =Аватеште (''Veratrum oxysepalum'')
 |superregnum =
 |subregnum = 
