*Empty MediaWiki Message*

--- a/1813_ие.mw
+++ b/1813_ие.mw
@@ -1,10 +1,10 @@
 {{Ие-нав|1813}}
-'''1813 ие'''.
+'''1813 (вейке тёжа кавксо сядт кемколмовоце) ие'''.
 
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-
+* [[Панжиковонь 22 чи]]стэ [[Вагнер Рихтер]] - немецэнь композиторось.
 == Кулость ==
 
 
