*Empty MediaWiki Message*

--- a/1461_ие.mw
+++ b/1461_ие.mw
@@ -1,5 +1,5 @@
 {{Ие-нав|1461}}
-'''1461 (Вейке тёжа кемкотово вейкеце) ие'''.
+'''1461 (Вейке тёжа ниле сядт кемкотово вейкеце) ие'''.
 
 == Мезе ульнесь те иестенть ==
 
