*Empty MediaWiki Message*

--- a/Од_Ульянонь_ош.mw
+++ b/Од_Ульянонь_ош.mw
@@ -1,14 +1,64 @@
-{{Ош
-| Лем = Од Ульянонь ош
-| Васенце лем = Новоульяновск
-| Раськень коцт =
-| Герб = Coat_of_arms_of_Novoulyanovsk.png
-| Мастор = [[Россия Мастор]]
-| Ошонть прявтозо = Матвей Володарский
-| Ломанть = 17100
-| Васенцедэ ледстямонзо = [[1960]]
-| Карта =
-|}}
+{{ЭТ
+ |статус                  = ош
+ |Эрзянь лем              = Од Ульянонь
+ |оригинальное название   = {{lang-ru|Новоульяновск}}
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = Россия
+ |герб                    = 
+ |коцт                    = 
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = 
+ |регион                  = 
+ |регион в таблице        = 
+ |вид района              = 
+ |район                   = 
+ |район в таблице         = 
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = 
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра ЭТ        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 
+  |год переписи           = 
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |шкань каркс             = 
+ |DST                     = 
+ |кортавксонь код         = 
+ |почтовый индекс         = 
+ |почтовые индексы        = 
+ |автомобильный код       = 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
+
 '''Од Ульянонь ош''' ({{lang-ru|Новоульяновск}}) — те [[Россия Мастор|Россия Масторонть]] ошось [[Ульянонь ёнкс|Ульянонь ёнкссо]]. Эрицятнеде 17,1 тёж. ([[2005]] ие).
 
 == Налткеть ==
