*Empty MediaWiki Message*

--- a/Од_Ульянонь_ош.mw
+++ b/Од_Ульянонь_ош.mw
@@ -11,16 +11,16 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
-  |CoordAddon             = 
+  |lat_dir = |lat_deg = 54|lat_min = 09|lat_sec = 
+  |lon_dir = |lon_deg = 48|lon_min = 23|lon_sec = 
+  |CoordAddon             = type:city(17100)_region:RU
   |CoordScale             = 
  |размер карты страны     = 
  |размер карты региона    = 
  |размер карты района     = 
- |вид региона             = 
- |регион                  = 
- |регион в таблице        = 
+ |вид региона             = ёнкс
+ |регион                  = Ульянонь ёнкс{{!}} Ульянонь
+ |регион в таблице        = Ульянонь ёнкс{{!}} Ульянонь
  |вид района              = 
  |район                   = 
  |район в таблице         = 
@@ -29,34 +29,34 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = 
- |глава                   = 
- |дата основания          = 
+ |глава                   = Деникаев Геннадий Петрович
+ |дата основания          = 1957 ие
  |первое упоминание       = 
  |прежние имена           = 
- |статус с                = 
+ |статус с                = 1967 ие
  |покшолмазо              = 
  |вид высоты              = 
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 14 555
+  |год переписи           = 2016
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |шкань каркс             = 
+ |шкань каркс             = +4
  |DST                     = 
  |кортавксонь код         = 
- |почтовый индекс         = 
+ |почтовый индекс         = 433300
  |почтовые индексы        = 
- |автомобильный код       = 
+ |автомобильный код       = 73, 173
  |вид идентификатора      = 
  |цифровой идентификатор  = 
  |категория в Commons     = 
- |сайт                    = 
- |язык сайта              = 
+ |сайт                    = http://www.adminnul.mv.ru/
+ |язык сайта              = ru
 }}
 
 '''Од Ульянонь ош''' ({{lang-ru|Новоульяновск}}) — те [[Россия Мастор|Россия Масторонть]] ошось [[Ульянонь ёнкс|Ульянонь ёнкссо]]. Эрицятнеде 17,1 тёж. ([[2005]] ие).
