*Empty MediaWiki Message*

--- a/Ведев_цирейлопа.mw
+++ b/Ведев_цирейлопа.mw
@@ -41,7 +41,7 @@
 }}
 '''Ведев цирейлопа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Alísma}}, {{lang-ru| ''Часту́ха'', или ''Водяно́й ши́льник'', ''Али́сма''}}) — ламоиень [[тикше]]нь касовкс Частуховонь семиястонть (''Alismataceae''). 
 
-Тикшесь ядов, кода ломанне, истя [[ракшат]]ненень<ref name="БСЭ">[http://dic.academic.ru/dic.nsf/bse/149568/Частуха Частуха  Большая советская энциклопедия. — М.: Советская энциклопедия. 1969—1978. Частуха ]{{ref-ru}}</ref>.
+Тикшесь ядов, кода ломанне, истя [[ракшат]]ненень<ref name="БСЭ">[http://dic.academic.ru/dic.nsf/bse/149568/Частуха Большая советская энциклопедия. — М.: Советская энциклопедия. 1969—1978. Частуха ]{{ref-ru}}</ref>.
  
 
 == Тикшень лемтне ==
