*Empty MediaWiki Message*

--- a/Ведев_цирейлопа.mw
+++ b/Ведев_цирейлопа.mw
@@ -45,8 +45,8 @@
  
 
 == Тикшень лемтне ==
-* ({{Lang-lat|Alisma plantdgo-aqudtica L.}}, {{lang-ru| ''Частуха подорожниковая''}})  - '''''килангопь ведев цирейлопа'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Alistna gramineum Lej.}}, {{lang-ru| ''Частуха злаковая''}})  - '''''сюроютконь ведев цирейлопа'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Alisma plantdgo-aqudtica L.}}, {{lang-ru| ''Частуха подорожниковая''}})  - '''''[[килангонь ведев цирейлопа]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Alistna gramineum Lej.}}, {{lang-ru| ''Частуха злаковая''}})  - '''''[[сюроютконь ведев цирейлопа]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Alismaticeae}}, {{lang-ru| ''Частуховые''}})  - '''''ведев цирейлопансетнень раськесь'''''<ref name="Русско-эрзянский ботанический"/>. 
 
 == Фотокувт== 
