*Empty MediaWiki Message*

--- a/Ведунтикше.mw
+++ b/Ведунтикше.mw
@@ -12,5 +12,5 @@
 [[Категория:Тикшеть|В]]
 [[Категория:Ормадо лезэвть|В]]
 [[Категория:Ярсамо тикшеть|В]]
-
+[[Категория:Биология|К]]
 [[bn:শতমূলী]]
