*Empty MediaWiki Message*

--- a/Ведев_цирейлопа.mw
+++ b/Ведев_цирейлопа.mw
@@ -1,8 +1,8 @@
 {{Таксономиясь
 |name =Ведев цирейлопа
 |latin =Alisma
-|image file =Alisma_plantago-aquatica20090812_259.jpg
-|image descr =Ведев цирейлопа
+|image file =AlismaPlant3.jpg
+|image descr =Ведев цирейлопа (''Alisma plantago-aquatica'')
 |superregnum =
 |subregnum = 
 |раздел =
