--- a/Сюроютконь_ведев_цирейлопа.mw
+++ b/Сюроютконь_ведев_цирейлопа.mw
@@ -48,7 +48,7 @@
 Тикшесь ядов, кода ломанне, истя [[ракшат]]ненень<ref name="БСЭ">[http://dic.academic.ru/dic.nsf/bse/149568/Частуха Большая советская энциклопедия. — М.: Советская энциклопедия. 1969—1978. Частуха ]{{ref-ru}}</ref>.
  
 == Ванстомазо ==
-Тикшесь совавтозь Чилисемань Суомискандимасторонть, [[Латвия Мастор|Латвия]]нь, [[Литва Мастор|Литва]]нь, [[Эстэнь Мастор|Эстэнь]] Якстере Книгас, истяжо [[Россия]]нь ёнксонь — [[Вологдань ёнкс|Вологдань]], [[Калининградонь ёнкс|Калининградонь]], [[Алоошонь ёнкс|Нижнёй ёнксонь]], [[Рязанень ёнкс|Рязанень]], [[Маринь Республикась|Марий Элэнь]], [[Мордовия]]нь, [[Татаронь Республикась|Татарстанонь]], [[Удмуртонь Республикась|Удмуртиянь]] ды [[Ине-Петрань ош]]онь Якстере Книгатнес<ref name="plantarium">[http://www.plantarium.ru/page/view/item/1832.html Частуха злаковая: информация о таксоне в проекте «Плантариум» (определителе растений и иллюстрированном атласе видов).]{{ref-ru}}</ref>.
+Тикшесь совавтозь Чилисемань Суомискандимасторонть, [[Латвия Мастор|Латвия]]нь, [[Литва Мастор|Литва]]нь, [[Эстэнь Мастор|Эстэнь]] Якстере Книгатнес, истяжо [[Россия]]нь ёнксонь — [[Вологдань ёнкс|Вологдань]], [[Калининградонь ёнкс|Калининградонь]], [[Алоошонь ёнкс|Нижнёй ёнксонь]], [[Рязанень ёнкс|Рязанень]], [[Маринь Республикась|Марий Элэнь]], [[Мордовия]]нь, [[Татаронь Республикась|Татарстанонь]], [[Удмуртонь Республикась|Удмуртиянь]] ды [[Ине-Петрань ош]]онь Якстере Книгатнес<ref name="plantarium">[http://www.plantarium.ru/page/view/item/1832.html Частуха злаковая: информация о таксоне в проекте «Плантариум» (определителе растений и иллюстрированном атласе видов).]{{ref-ru}}</ref>.
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Alisma L.}}, {{lang-ru| ''Частуха''}})  - '''''[[ведев цирейлопа]]'''''<ref name="Русско-эрзянский ботанический"/>.
