--- a/Борец.mw
+++ b/Борец.mw
@@ -1,10 +1,62 @@
-[[Артовкс:DaturaStramonium-plant-sm.jpg|thumb|300px|right|border|Борец цецянь пурнавксось]]
-[[File:Datura stramonium MHNT.BOT.2004.0.263a.jpg|thumb|'' Datura stramonium '']]
-'''Борец''' (лат. ''Datura stramonium'') — вейке мень перть касыця тикше. Пиненьбапсонь семиянь.
+{{Таксономиясь
+|name =Борец
+|latin =Datura stramonium
+|image file =DaturaStramonium-plant-sm.jpg
+|image descr =Борец цецянь пурнавксось
+|superregnum =
+|subregnum = 
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       =Datura stramonium
+| commons           =Category:Datura stramonium
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 
+| grin             = 
+| ipni              = 
+}}
+'''Борец<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 {{ref-ru}}, {{ref-myv}}</ref>''', лиякс: '''Чинев ормаза тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' (лат. ''Datura stramonium'', {{lang-ru| ''Дурма́н обыкнове́нный'', или ''Дурман воню́чий''}}) — вейке иень перть касыця [[тикше]]. Датура буень (''Datúra''), Пиненьбапсонь семиянь (''Solanaceae'').
 
 Кассы сэрейстэ, нетьксэсь кеме. Лопанзо келейть. Цяцянзо [[ашо|ашот]]. Весе тикшестэнть качады апаро чине. Видьмензэ кекшезь пупиця куймес. Касы кудо, кардаз малава, пирева. Тикшесь пек ядов. Маштови надобиянь теемс.
 
-== Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
+== Тикшень лемтне ==
+* ({{Lang-lat|Datura L.}}, {{lang-ru| ''Дурман''}})  - '''''[[ормаза тикше]]'''''<ref name="Русско-эрзянский ботанический"/>. 
 
+== Фотокувт== 
+<gallery>
+Image:Datura stramonium 1 (2005 07 07).jpg||250px|center|Цецясь
+Image:Datura stramonium-3.jpg|250px|center|Маресь
+File:Bieluń dziędzierzawa Datura stramonium Seed.jpg||250px|center|Видьметь
+</gallery>
+
+==  Лисьмапря ==
+<references />
+
+[[Категория:Биология|Б]]
+[[Категория:Ядовт|Б]]
+[[Категория:Ормадо лезэвть|Б]]
 [[Категория:Тикшеть|Б]]
