*Empty MediaWiki Message*

--- a/Йока.mw
+++ b/Йока.mw
@@ -21,7 +21,7 @@
   |Ёнкст                  = Орёлонь ёнкс/Тулань ёнкс/Калугань ёнкс/Московонь ёнкс/Рязанень ёнкс/Олодимирэнь ёнкс/Алоошонь ёнкс
    |Буе                   = 
 }}
-
+[[File:Joka lej сhugunkasto.jpg|250px|thumb|Йока леесь чугунка кистэнть, [[Алоош]]онь (Нижнёй) вакссо.]]
 '''Йока''' ({{lang-ru|Ока}})  — те лей Европа ёнсе [[Россия Мастор|Россиянь Масторсо]], покшовикс видьёнонь сянглейтнеде [[Рав|Рав леенть]]. 
 
 Кувалмозо малав 1500 [[Вайгельпе|вп]]. Покшолмазо 245 тёж. [[Вайгельпе|вп]]².
