*Empty MediaWiki Message*

--- a/Калгодо_марь.mw
+++ b/Калгодо_марь.mw
@@ -39,7 +39,7 @@
 | grin             = 7630
 | ipni              = 
 }}
-'''Калгодо марь<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Mílium}}, {{lang-ru| '''Бор'', ''Просяник''}}) — [[тикше]]нь касовкс  Сюронь семиястонть (''Poaceae'').  Ламоиень эли вейкеиень касовкст, келейстэ касы Пелевеёнксонь пельшаронь [[вирь]]га.   
+'''Калгодо марь<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Mílium}}, {{lang-ru| ''Бор'', ''Просяник''}}) — [[тикше]]нь касовкс  Сюронь семиястонть (''Poaceae'').  Ламоиень эли вейкеиень касовкст, келейстэ касы Пелевеёнксонь пельшаронь [[вирь]]га.   
 
 [[Латинэнь кель|Латинэнь]] лемесь ''Milium'' икеле [[Кезэрень Рим]]сэ  ульнесь [[cуро]]нь сюронть тешкcтамо.
 
