*Empty MediaWiki Message*

--- a/Борец.mw
+++ b/Борец.mw
@@ -39,7 +39,7 @@
 | grin             = 
 | ipni              = 
 }}
-'''Борец<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 {{ref-ru}}, {{ref-myv}}</ref>''', лиякс: '''Чинев ормаза тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' (лат. ''Datura stramonium'', {{lang-ru| ''Дурма́н обыкнове́нный'', или ''Дурман воню́чий''}}) — вейке иень перть касыця [[тикше]]. Датура буень (''Datúra''), Пиненьбапсонь семиянь (''Solanaceae'').
+'''Борец<ref name="Р.Н. Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 {{ref-ru}}, {{ref-myv}}</ref>''', лиякс: '''Чинев ормаза тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Datura stramonium}}, {{lang-ru| ''Дурма́н обыкнове́нный'', или ''Дурман воню́чий''}}) — вейке иень перть касыця [[тикше]]. Датура буень (''Datúra''), Пиненьбапсонь семиянь (''Solanaceae'').
 
 Кассы сэрейстэ, нетьксэсь кеме. Лопанзо келейть. Цяцянзо [[ашо|ашот]]. Весе тикшестэнть качады апаро чине. Видьмензэ кекшезь пупиця куймес. Касы кудо, кардаз малава, пирева. Тикшесь пек ядов. Маштови надобиянь теемс.
 
