--- a/Мазый_черь.mw
+++ b/Мазый_черь.mw
@@ -46,8 +46,8 @@
 == Тикшень лемтне ==
 * ({{Lang-lat|Callitrichaceae}}, {{lang-ru| ''Болотниковые''}})  - '''''чеядавксонсетнень раськесь'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Callitriche cophocarpa Sendtner.}}, {{lang-ru| ''Болотник короткоплодный''}})  - '''''нурька марь марто мазый черь'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Callitriche <myv>hermaphro-ditica L.}}, {{lang-ru| ''Болотник обоеполый''}})  - '''''гермофродитной мазый черь'''''<ref name="Русско-эрзянский ботанический"/>. 
-* ({{Lang-lat|Callitriche palustre L.}}, {{lang-ru| ''Болотник болотный ''}})  - '''''[[чеядавксонь мазый черь]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Callitriche hermaphro-ditica L.}}, {{lang-ru| ''Болотник обоеполый''}})  - '''''гермофродитной мазый черь'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Callitriche palustre L.}}, {{lang-ru| ''Болотник болотный ''}})  - '''''[[чеядавксонь мазый черь]]'''''<ref name="Русско-эрзянский ботанический"/>.
 
 == Фотокувт== 
 <gallery>
