*Empty MediaWiki Message*

--- a/Гуеньпочко.mw
+++ b/Гуеньпочко.mw
@@ -2,7 +2,7 @@
 |name =Гуеньпочко
 |latin =Conīum
 |image file =Conium maculatum.jpg
-|image descr =Гуеньпочко (''onīum maculātum'')
+|image descr =Гуеньпочко (''Conīum maculātum'')
 |superregnum =
 |subregnum = 
 |раздел =
