*Empty MediaWiki Message*

--- a/Чудожов.mw
+++ b/Чудожов.mw
@@ -61,4 +61,5 @@ Image:Cirsium arvense - põldohakas.jpg|250px|center|(''Cirsium arvense'')
 <references />
 
 [[Категория:Биология|Ч]]
+[[Категория:Пакся тикшеть‎|Ч]]
 [[Категория:Тикшеть|Ч]]
