*Empty MediaWiki Message*

--- a/Пурьгинепалакс.mw
+++ b/Пурьгинепалакс.mw
@@ -41,7 +41,7 @@
 }}
 '''Пурьгинепалакс<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Cárduus}}, {{lang-ru| ''Чертополо́х''}}) — буень [[тикше]]нь касовкс Астрань семиястонть (Asteráceae). 
 
-Пурьгинепалаксось - а изнявиця [[пакся тикше]]. [[Цеця]]тнестэ [[мекше|мекштне]] саить медярво.
+[[Цеця]]тнестэ [[мекше|мекштне]] саить медярво.
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Cdrduus nutans L.}}, {{lang-ru| ''Чертополох поникший''}})  - '''''нувара пурьгинепалакс'''''<ref name="Русско-эрзянский ботанический"/>. 
@@ -56,6 +56,5 @@
 
 [[Категория:Биология|П]]
 [[Категория:Ярсамо тикшеть‎|П]]
-[[Категория:Пакся тикшеть‎|П]]
 [[Категория:Медярво максыйть|П]]
 [[Категория:Тикшеть|П]]
